--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hola electiva2 prueba</h1>
+    <h1>Hola electiva2</h1>
   </body>
 </html>
